# bitops

./: CMakeLists.txt  Makefile  README.md  bitlog.h  bits.h  builtin_popcount.h  cast_to_unsigned.h  magic_bits.h  popcount.h  test_popcount.cc
